aliyun-kubernetes-app/1.app-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: myserver
